--- a/templates/getStarted.html
+++ b/templates/getStarted.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NAVI</title>
+  <title>Get Started</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     html, body {
@@ -43,6 +43,7 @@
       <a href="index.html" class="text-white hover:text-gray-400 transition">How It Works</a>
       <a href="ourGoal.html" class="text-white hover:text-gray-400 transition">Our Goal</a>
       <a href="getStarted.html" class="text-white hover:text-gray-400 transition">Get Started</a>
+      <a href="demo.html" class="text-white hover:text-gray-400 transition">Demo</a>
     </div>
   </nav>
 
