--- a/templates/ourGoal.html
+++ b/templates/ourGoal.html
@@ -35,6 +35,7 @@
       <a href="index.html" class="text-white hover:text-[#9c9c9c] transition">How It Works</a>
       <a href="ourGoal.html" class="text-white hover:text-[#9c9c9c] transition">Our Goal</a>
       <a href="getStarted.html" class="text-white hover:text-[#9c9c9c] transition">Get Started</a>
+      <a href="demo.html" class="text-white hover:text-gray-400 transition">Demo</a>
     </div>
   </nav>
 
